--- a/client/index.html
+++ b/client/index.html
@@ -75,11 +75,9 @@
     <script type="module">
         import {trailingCursor} from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
 
-        new trailingCursor();
-
-        window.addEventListener("load", (event) => {
-            new cursoreffects.ghostCursor();
-        });
+        if (!("ontouchstart" in document.documentElement)) {
+            new trailingCursor();
+        }
     </script>
 </body>
 
