--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="blur"></div>
     <main>
+        <!-- <div class="loading"></div> -->
         <div class="flex">
             <h1>railway.wtf</h1>
             <select id="stationSelect"></select>
@@ -40,12 +41,12 @@
             </h3>
         </div>
     </template>
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="src/build/bundle.min.js"></script>
     <script type="module">
-        import {trailingCursor} from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
+        import { trailingCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
 
         if (!("ontouchstart" in document.documentElement)) {
-            new trailingCursor();
+            new trailingCursor({ element: document.documentElement });
         }
     </script>
 </body>
