--- a/client/index.html
+++ b/client/index.html
@@ -43,11 +43,13 @@
     </template>
     <script type="module" src="src/build/bundle.min.js"></script>
     <script type="module">
-        import { trailingCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
+        
+        //import { trailingCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
 
-        if (!("ontouchstart" in document.documentElement)) {
-            new trailingCursor({ element: document.documentElement });
-        }
+        //if (!("ontouchstart" in document.documentElement)) {
+            //new trailingCursor({ element: document.documentElement });
+        //}
+        
     </script>
 </body>
 
