feat(client): user is shown if there is an error fix(api): departures now only show train departures and not bus

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="blur"></div>
     <main>
-        <!-- <div class="loading"></div> -->
+        <div class="loader"></div>
         <div class="flex">
             <h1>railway.wtf</h1>
             <select id="stationSelect"></select>
@@ -42,15 +42,6 @@
         </div>
     </template>
     <script type="module" src="src/build/bundle.min.js"></script>
-    <script type="module">
-        
-        //import { trailingCursor } from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
-
-        //if (!("ontouchstart" in document.documentElement)) {
-            //new trailingCursor({ element: document.documentElement });
-        //}
-        
-    </script>
 </body>
 
 </html>
