fix: use unminified version due to closure issue

--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
             </h3>
         </div>
     </template>
-    <script type="module" src="src/build/bundle.min.js"></script>
+    <script type="module" src="src/build/bundle.js"></script>
 </body>
 
 </html>
