--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <main>
         <div class="loader"></div>
         <div class="flex">
-            <h1>railway.wtf</h1>
+            <h1>railway.bio</h1>
             <select id="stationSelect"></select>
         </div>
         <div class="departure-wrapper">
