--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
